--- a/AdmApp/AdmApp/Views/Home/Index.cshtml
+++ b/AdmApp/AdmApp/Views/Home/Index.cshtml
@@ -13,13 +13,11 @@
         </p>
     </div>
     <div class="col-md-4">
-        <h2>Bienvenidos</h2>
-        <p>You can build the application by following the steps in the tutorial series on the ASP.NET site.</p>
-        <p><a class="btn btn-default" href="http://www.asp.net/mvc/tutorials/getting-started-with-ef-using-mvc/">See the tutorial &raquo;</a></p>
+        <h2>Inquilinos</h2>
+        <p><a class="btn btn-default" href="/Locadores">Inquilinos &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Download it</h2>
-        <p>You can download the completed project from the Microsoft Code Gallery.</p>
-        <p><a class="btn btn-default" href="http://code.msdn.microsoft.com/ASPNET-MVC-Application-b01a9fe8">Download &raquo;</a></p>
+        <h2>Locadores</h2>
+        <p><a class="btn btn-default" href="/Locadores">Locadores &raquo;</a></p>
     </div>
 </div>
